language/move-prover/tests/sources/functional/type_values.exp
Move prover returns: exiting with boogie verification errors
error: post-condition does not hold

    ┌── tests/sources/functional/type_values.move:25:9 ───
    │
 25 │         invariant forall t: type : resource_invariant_globally_defined(t);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/type_values.move:33:5: add_R
    =     at tests/sources/functional/type_values.move:34:34: add_R
    =         account = <redacted>

error: post-condition does not hold

    ┌── tests/sources/functional/type_values.move:25:9 ───
    │
 25 │         invariant forall t: type : resource_invariant_globally_defined(t);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/type_values.move:37:5: add_R_incorrect
    =     at tests/sources/functional/type_values.move:38:34: add_R_incorrect
    =         account = <redacted>

error: post-condition does not hold

    ┌── tests/sources/functional/type_values.move:18:9 ───
    │
 18 │         ensures result == (type<T1>() != type<T2>());
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/type_values.move:14:5: simple_type_equality_incorrect
    =     at tests/sources/functional/type_values.move:15:9: simple_type_equality_incorrect
    =         result = <redacted>
    =     at tests/sources/functional/type_values.move:16:5: simple_type_equality_incorrect
